# coordinates-label-photos

./: .gitignore  LICENSE  README.md  calibrate_photos.py  compare-gpx.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
config/: salvan-parking-20220312.yaml  salvan-wall-20220312-fenix5.yaml  salvan-wall-20220312-gpsmap86i.yaml
coordinates/: __init__.py  coordinates_collection.py  test_coordinates_collection.py
examples/: fenix5.gpx  gpsmap66sr.gpx  gpsmap86i.gpx  iphone.gpx
experiments/do-we-have-the-correct-position/: README.md  get-delta.py  image_timestamps.py  llh_to_utm.py
experiments/do-we-have-the-correct-position/measures/: emlid-0-positions.csv  emlid-localhost_solution_20230812112902.LLH  image-estimated-positions.csv
experiments/do-we-have-the-correct-position/results/: images-computed-positions.csv
gpx/: __init__.py
photos/: __init__.py  test_photos.py
reports/: coordinates_collection.py
resources/: grmn071n52.csv
resources/photo-gps/: track.gpx
resources/photo-gps-timing/: ts_reach_ro.LLH  ts_reach_ro.pos
src/coordinates_label_photos/coordinates/: __init__.py  coordinates_collection.py  coordinates_test.py  coordinates_utm.py  crs_transformer.py  test_coordinates_collection.py  test_coordinates_utm.py  test_crs_transformer.py
src/coordinates_label_photos/gpx/: __init__.py
src/coordinates_label_photos/parsers/: __init__.py  test_parser.py  test_parsers.py
src/coordinates_label_photos/photos/: __init__.py  test_photos.py
src/coordinates_label_photos/reports/: coordinates_collection.py
src/coordinates_label_photos/scripts/: clear_photo_coords.py  images_to_gpx.py  label_photos.py  plot_coords_tracks.py  plot_gpx_tracks.py  print_exif.py  select-closest-images.py  select_closest_photos.py  test_label_photos.py
