[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "coordinates-label-photos"
version = "1.0.5"
authors = [
    { name="Alexandre Masselot", email="alexandre.masselot@gmail.com" },
]
description = "Insert GPS coordinates into pictures EXIF, based on an external track and interpolating timestamp-Plus a few goodies."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow >=9.1.0",
    "tqdm==4.64.0",
    "geopy==2.2.0",
    "gpxpy==1.5.0",
    "pandas==1.4.3",
    "piexif==1.1.3",
    "pyproj==3.6.0",
]

[project.urls]
"Homepage" = "https://github.com/terra-submersa/coordinates-label-photos"
"Bug Tracker" = "https://github.com/terra-submersa/coordinates-label-photos/issues"

[project.scripts]
coordinates-label-photos = "coordinates_label_photos.scripts.label_photos:main"
coordinates-clear-photos = "coordinates_label_photos.scripts.clear_photo_coords:main"
plot-coords-tracks = "coordinates_label_photos.scripts.plot_coords_tracks:main"
images-to-gpx = "coordinates_label_photos.scripts.images_to_gpx:main"
select-closest-photos = "coordinates_label_photos.scripts.select_closest_photos:main"