[metadata]
name = coordinates-label-photos
version = 0.1.4
author = Alexandre Masselot
author_email = alexandre.masselot@gmail.com
description = Insert GPS coordinates into pictures EXIF, based on an external track and interpolating timestamp
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/terra-submersa/coordinates-label-photos
project_urls =
    Bug Tracker = https://github.com/terra-submersa/coordinates-label-photos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    Pillow >=9.1.0
    numpy
    argparse
    tqdm
    geopy==2.2.0
    gpxpy==1.5.0
    piexif==1.1.3
[options.packages.find]
where = src

