[metadata]
name = coordinates-label-photos
version = 0.1.9
author = Alexandre Masselot
author_email = alexandre.masselot@gmail.com
description = Insert GPS coordinates into pictures EXIF, based on an external track and interpolating timestamp-Plus a few goodies.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/terra-submersa/coordinates-label-photos
project_urls =
    Bug Tracker = https://github.com/terra-submersa/coordinates-label-photos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    Pillow >=9.1.0
    tqdm==4.64.0
    geopy==2.2.0
    gpxpy==1.5.0
    pandas==1.4.3
    piexif==1.1.3
    pyproj==3.3.1
[options.packages.find]
where = src

